Update add index.php and new .env-exemplo

--- a/uradapiclient/.env-exemplo
+++ b/uradapiclient/.env-exemplo
@@ -16,7 +16,7 @@
 
 CI_ENVIRONMENT = development
 
-APP_API_URL = 'http://localhost:89/dev/radApi/public/v1'
+APP_API_URL = 'http://localhost/dev/radApi/public/v1'
 APP_API_KEY = ''
 APP_API_PROXY = ''
 # '10.1.1.4:8080'
@@ -26,7 +26,7 @@ APP_API_PROXY = ''
 #--------------------------------------------------------------------
 
 #app.baseURL = 'http://srvm28/app/tiadmin/uadm'
-app.baseURL = 'http://localhost:89/dev/urep' 
+app.baseURL = 'http://localhost/dev/uRadApiPhpClient/uradapiclient' 
 
 # app.forceGlobalSecureRequests = false
 
